SLING-13050 eliminate some sonar warnings